Dependency injection done
